# epnp

./: CMakeLists.txt  README.md
examples/: eigen_example.cpp  epnp_example.cpp
src/: epnp.cpp  epnp.h
